# DesignPatterns

./: .gitignore  CMakeLists.txt  LICENSE  readme.md
1.简单工厂模式/1.10/: main.cpp  op.h  opfactory.h
1.简单工厂模式/1.3/: main.cpp
1.简单工厂模式/1.8/: main.cpp  op.h
10.模板方法模式/10.4/: abstract.h  main.cpp
12.外观模式/12.4/: main.cpp  subsystem.h
13.建造者模式/13.4/: Person.h  main.cpp
13.建造者模式/13.6/: main.cpp  product.h
14.观察者模式/14.2/: main.cpp  person.h
14.观察者模式/14.4/: main.cpp  person.h
14.观察者模式/14.8/: main.cpp  person.h
15.抽象工厂模式/15.2/: main.cpp  user.h
15.抽象工厂模式/15.3/: factory.h  main.cpp  user.h
15.抽象工厂模式/15.4/: department.h  main.cpp
15.抽象工厂模式/15.7/: dataaccess.h  factory.h  main.cpp  user.h
15.抽象工厂模式/15.8/: dataaccess.h  department.h  main.cpp
15.抽象工厂模式/15.9/: appsettings.cfg  reflect.h
2.策略模式/: readme.md
2.策略模式/2.3/: cash.h  cashfactory.h  main.cpp
2.策略模式/2.5/: cashcontext.h  main.cpp
2.策略模式/2.6/: cashcontext.h  main.cpp
2.策略模式/2.9-AI/: cash.h  cashcontext.h  main.cpp  readme.md
6.装饰模式/6.2/: main.cpp  person.h
6.装饰模式/6.5/: main.cpp  person.h
7.代理模式/7.4/: givegift.h  main.cpp  schoolgirl.h
8.工厂模式/8.3/: factory.h  main.cpp
9.原型模式/9.2/: main.cpp  resume.h
9.原型模式/9.4/: main.cpp  resume.h
9.原型模式/9.5/: resume.h
9.原型模式/9.6/: main.cpp  resume.h
